# indian-budget-chatbot

./: README.md  chat-log.txt  create_index.py  pyproject.toml  query-log.txt  run_chat.py  run_query.py
storage/: index_store.json
