[tool.poetry]
name = "indian-budget-chatbot"
version = "0.1.0"
description = "LLM chatbot over speeches of Indian Finance Ministers."
authors = ["Jiten Vaidya <jitendra.vaidya@gmail.com>"]
readme = "README.md"
packages = [{include = "indian_budget_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
chromadb = "^0.4.3"
llama-index = "^0.7.14"
pypdf = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
